*winetricks-20150316 (16 Mar 2015)

  16 Mar 2015; NP-Hardass <np.hardass@gmail.com> +winetricks-20150316.ebuild,
  winetricks-99999999.ebuild:
  Update source locations to github.  Project moved because Google announced the
  shutdown of Google Code

  07 Mar 2015; NP-Hardass <np.hardass@gmail.com> winetricks-20141130.ebuild,
  winetricks-99999999.ebuild:
  Sync with upstream Gentoo

  07 Mar 2015; NP-Hardass <np.hardass@gmail.com> winetricks-20141130.ebuild:
  Backport new git rebuild features to 20141130

*winetricks-99999999 (07 Mar 2015)

  07 Mar 2015; NP-Hardass <np.hardass@gmail.com> +winetricks-99999999.ebuild:
  Add live ebuild with patch from Bob Wya.  Resolves Gentoo bug #540662

*winetricks-20141130 (22 Jan 2015)

  22 Jan 2015; NP-Hardass <np.hardass@gmail.com> +metadata.xml,
  +winetricks-20141130.ebuild:
  Import from Gentoo, version bump to 20141130