@@ -1,3 +1,22 @@
-DIST 20150316.zip 172905 SHA256 3242e9ca1225cf9d69e70d09faaf87eda3f2a62b20ea500e1dc688dd06721b87 SHA512 3b1d8131ff3f49967327c1e4a22cd9240bcff2e199bf2b1b3738b60060952fe0a905f27197cb0fad7def597ef125a706e089e53787c7b9990f815caf4134e67d WHIRLPOOL d6788e5dcd40404e5df761da10db51e445fa0ad2a1a7d8b4c1df2137d54d34a42fd75c87590ac817392104ce2017c5af15392448ea543a7ee0aded587c64ec3f
-DIST winetricks-20141130.tar.gz 164917 SHA256 6088f45cac80e0a05a52b0a8885739f98b2c5ae07062bfa2aee1265d63891b56 SHA512 b7fbbcbef1a197b65c0def1cffb238d2ac58862e60aa76503171098ff35cf190a072ae7cddf865f5b03a8269702a804c7ad8ada498b922814f0aad8b2970cee1 WHIRLPOOL 16347e85d161cbf78df9d46b1b49292fe0618e6bfc32d0115e104d0bba1e5cbd6f974e6872ddb7ac8679c8dcf9eccbe0b26841ce02723d1456e0a3c3645d53ed
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST 20150416.zip 175882 SHA256 92f44cd5a2f17d24135255f3232e7d302fa9ab9ddf62a2cffdd1747e3b8cb1f2 SHA512 9f402dfa633262036171b4b2db1c7644c75f45fad8a672e249bf174aeaf065a302552f11baea14e0de903c981ca4dfc267b74c0ce9808f1e278f33c255e35e6e WHIRLPOOL 0153ccd6abda3ee31fe018449091b87154eeb5443dd03b8708a989e25a96653e0fe1961790147b67f7d04d02b5478b392015783ca09f2714d6b2ed9c462a2354
 DIST winetricks-gentoo-2012.11.24.tar.bz2 6398 SHA256 dded8c294cc5c2e71e4a5d1531ab165178cf3d2d1d890d0656368c2e499bfeb9 SHA512 59c93b73f3a7b2d11aefcde2ff66659ff1de21ad4b5f232f4b60572f3a48b15a6c49f369b1696862bf1b33fde190bf5598945e9536fb41ddec42d8def4d2be2a WHIRLPOOL 268da9e06712a678fbbcfff8eac1fca364b5e46f0a9c48a591eb88f03260b1a55f203eb2908bfe1f0a534b77c866127ff6f7049b0e43fe8abeaaa26fe55de75b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJVfGiSAAoJEBzZQR2yrxj70NUQAK4UJ1kMHSqftbO45a9GWVx4
+5INZ/O9nKw19Z1xphXruBDT8DUG5xheRu0jgVjAa4KzmJI91eTzG0EPFCAPzUiG9
+FL9bjU4dlimvRsNn5OTPRJ5Yv4hJ62F2Dd/gGMqK4rjfgGWciCGesEkvtIlIKdd8
+3EMjyEzi17I8OqI+BP0QI8eIz15QlccqwWiTfshi9IB3LHTltTSQDzXRE1pe50oy
+/esf/s9oi8idGmvym6Vr9qFygr0EDQWcutjEYzqj2MS7B31kVhtSTqR6kEtZSMhL
+qljkdSSHgfJ34xjCIyxhkN97SNltr23YLUgqv4mCVzc3qc5PK5N9bHW8xfFyMZeC
+9QKvcGqay5DEwSBqIj6TTA9ZZBeVMVRsSVemHQ+kBTK/JogXz/8qqmplmHDS9T1n
+8FAV9hYiOoFiTSpbCgB2j+UodlXHBiKeCatV/UydsZjlGyO533BU/G+wGkp3Uxvj
+kZxyst+iDzx+VehDLl4lVs04E+eVPLqqJUxi/l799AR47+6/xbq+0qP2ncvn9WxW
+6ChPinOl7wkmGFG4TfhzPh2IiKYYR27zdKiQa+J2NvfasTXeLaYU49eSOXeOmMp5
+3c/z882FM1jjJJZ9ma5ar4LVSJw4ltH0YbjZP6izeQoKXgVnUAzW/m3lXa0cKbPX
+lT3Zko5oIRefGTSK5Wiu
+=NOx4
+-----END PGP SIGNATURE-----
